--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.11",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "quasar": "^2.16.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
