--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.11",
+    "@tanstack/vue-query": "^5.51.1",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "quasar": "^2.16.4",
