--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.16.11",
     "@tanstack/vue-query": "^5.51.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.12",
     "js-cookie": "^3.0.5",
     "quasar": "^2.16.4",
     "vue": "^3.4.21",
