--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@eslint/js": "^9.5.0",
     "@quasar/vite-plugin": "^1.7.0",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@types/js-cookie": "^3.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^9.5.0",
@@ -33,6 +36,7 @@
     "globals": "^15.6.0",
     "prettier": "^3.2.5",
     "sass": "^1.33.0",
+    "typescript": "^5.5.4",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
