--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "lint:types": "vue-tsc --noEmit",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -19,7 +20,8 @@
     "js-cookie": "^3.0.5",
     "quasar": "^2.16.4",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-tsc": "^2.1.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.18.1",
