--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.12",
     "js-cookie": "^3.0.5",
     "quasar": "^2.16.4",
+    "vite-plugin-vercel": "^9.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
