--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_BASE_URL_LOCAL="http://localhost:3000"
 
-VITE_BASE_URL_HOMOLOG="https://gerenciador-e-controle-de-gastos.vercel.app"
+VITE_BASE_URL_HOMOLOG="https://gerenciador-e-controle-de-gasto-git-7e5dbf-guilberthts-projects.vercel.app/"
+
 
 VITE_BASE_URL_PRODUCTION=""
